--- a/style/css/basic.css
+++ b/style/css/basic.css
@@ -77,7 +77,7 @@ button:focus {
 
 /* line 89, D:/wamp64/www/alice/style/scss/basic.scss */
 .boxed {
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.26);
   -moz-box-sizing: border-box;
 }
 
@@ -105,6 +105,7 @@ button:focus {
 /* line 109, D:/wamp64/www/alice/style/scss/basic.scss */
 .spacer.big {
   height: 10vh;
+  position: relative;
 }
 
 /*# sourceMappingURL=../css/basic.map */
