--- a/style/css/style.css
+++ b/style/css/style.css
@@ -77,7 +77,7 @@ button:focus {
 
 /* line 89, D:/wamp64/www/alice/style/scss/basic.scss */
 .boxed {
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.26);
   -moz-box-sizing: border-box;
 }
 
@@ -105,6 +105,7 @@ button:focus {
 /* line 109, D:/wamp64/www/alice/style/scss/basic.scss */
 .spacer.big {
   height: 10vh;
+  position: relative;
 }
 
 /* line 2, D:/wamp64/www/alice/style/scss/style.scss */
@@ -120,7 +121,7 @@ body {
 
 /* line 12, D:/wamp64/www/alice/style/scss/style.scss */
 header {
-  background: linear-gradient(to right, #fa508c, #ffc86d);
+  background: #282d35;
   height: 250px;
   position: relative;
 }
@@ -347,7 +348,7 @@ header {
   color: #fff;
   border-radius: 4px;
   font-family: "Ubuntu", sans-serif;
-  box-shadow: 0 1px 1px rgba(4, 42, 117, 0.33);
+  box-shadow: 0 1px 5px rgba(4, 42, 117, 0.33);
   -moz-box-sizing: border-box;
 }
 
@@ -611,6 +612,32 @@ header {
 /* line 410, D:/wamp64/www/alice/style/scss/style.scss */
 .slick-slide img {
   display: inline-block;
+}
+
+/* line 415, D:/wamp64/www/alice/style/scss/style.scss */
+#modalSearch {
+  position: absolute;
+  right: 0;
+  top: -11px;
+  line-height: 25px;
+  width: 114px;
+  padding-right: 14px;
+  margin-right: 50px;
+  background: #3575ef;
+  color: #fff;
+  text-align: center;
+  border-radius: 4px;
+}
+
+/* line 427, D:/wamp64/www/alice/style/scss/style.scss */
+#modalSearch:after {
+  content: " ";
+  background: url(../../assets/icons/magnifying-glass.svg) no-repeat;
+  width: 20px;
+  height: 20px;
+  top: 4px;
+  margin-left: 5px;
+  position: absolute;
 }
 
 /*# sourceMappingURL=../css/style.map */
