--- a/style/scss/basic.scss
+++ b/style/scss/basic.scss
@@ -88,7 +88,7 @@ button{
 
 .boxed{
     
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.26);
     -moz-box-sizing: border-box;
 }
 
@@ -106,4 +106,7 @@ button{
 }
 
 .spacer.huge{height: 20vh;}
-.spacer.big{height: 10vh;}
+.spacer.big{height: 10vh;position: relative;}
+
+
+// SEARCH
